<resources>
    <string name="app_name">QAHelper</string>
    <string name="setting_page">设置页跳转</string>
    <string name="permission">权限</string>
    <string name="app">应用：</string>
    <string name="select_app">选择应用</string>
    <string name="permission_storage">存储权限</string>
    <string name="permission_notification">通知访问权限</string>
    <string name="permission_usage">使用情况访问权限</string>
    <string name="permission_window">悬浮窗权限</string>
    <string name="permission_accessibility">辅助权限</string>
    <string name="time_date">时间日期</string>
    <string name="language_change">语言切换</string>
    <string name="changed">已切换为 %s</string>
    <string name="select_language">选择语言</string>
    <string name="app_manage">应用管理</string>
    <string name="apk">APK</string>
    <string name="ftp">FTP</string>
    <string name="app_download">应用下载</string>
    <string name="uninstall">卸载</string>
    <string name="path">路径：</string>
    <string name="dir_empty">文件夹为空</string>
    <string name="auth_fail">授权失败</string>
    <string name="download_fail">%s 文件下载失败</string>
    <string name="download_suc">%s 文件下载完成</string>
    <string name="download_start">开始下载 %s</string>
    <string name="download">下载</string>
    <string name="download_and_open">下载完成后打开</string>
    <string name="cancel">取消</string>
    <string name="download_history">下载历史</string>
    <string name="edit">编辑</string>
    <string name="done">完成</string>
    <string name="delete">删除</string>
    <string name="not_select">未选中文件</string>
    <string name="delete_suc">已删除 %d 个文件</string>
    <string name="login_fail">FTP登录失败，请检查网络</string>
    <string name="home">首页</string>
    <string name="language">语言</string>
    <string name="setting">设置</string>
    <string name="app_not_install">应用未安装</string>
    <string name="help">帮助</string>
    <string name="note">注意</string>
    <string name="language_help_desc">只有系统预设应用才能获取CHANGE_CONFIGURATION权限，点击 #帮助# 查看如何授予权限给此应用</string>
    <string name="language_why_title">为什么不能正常工作?</string>
    <string name="language_why_desc">Android 4.2以后只有系统应用才能获取CHANGE_CONFIGURATION权限，此应用需要这个权限来修改系统语言。</string>
    <string name="language_method_title">如何使应用正常工作?</string>
    <string name="language_method_desc">方法：如果你知道如何使用ADB命令，将您的手机连上电脑，输入如下命令：</string>
    <string name="language_adb_content">adb shell pm grant com.noxgroup.qahelper android.permission.CHANGE_CONFIGURATION</string>
    <string name="copy">复制</string>
    <string name="copy_suc">复制成功</string>
    <string name="app_start">启动应用</string>
    <string name="start_fail">启动失败</string>
    <string name="install">安装</string>
    <string name="version_history">版本历史</string>
</resources>