<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="20dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv_app_name"
        style="@style/style_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:paddingVertical="10dp"
        android:text="@string/app"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.noxgroup.qahelper.permission.widget.CustomerCheckBox
        android:id="@+id/checkbox"
        android:layout_width="0dp"
        android:layout_height="46dp"
        android:background="@drawable/bg_app_check"
        android:button="@null"
        android:drawableEnd="@drawable/selector_app_raw"
        android:gravity="center_vertical"
        android:paddingStart="10dp"
        android:text="@string/select_app"
        android:textColor="@color/color_333333"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tv_app_name"
        app:layout_constraintTop_toTopOf="@id/tv_app_name" />

    <TextView
        android:id="@+id/tv_permission_storage"
        style="@style/style_btn"
        android:text="@string/permission_storage"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_app_name" />

    <TextView
        android:id="@+id/tv_permission_window"
        style="@style/style_btn"
        android:text="@string/permission_window"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_permission_storage" />

    <TextView
        android:id="@+id/tv_permission_usage"
        style="@style/style_btn"
        android:text="@string/permission_usage"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_permission_window" />

    <TextView
        android:id="@+id/tv_permission_notification"
        style="@style/style_btn"
        android:text="@string/permission_notification"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_permission_usage" />

    <TextView
        android:id="@+id/tv_permission_accessibility"
        style="@style/style_btn"
        android:text="@string/permission_accessibility"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_permission_notification" />

    <TextView
        android:id="@+id/tv_app_manage"
        style="@style/style_btn"
        android:text="@string/app_manage"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_permission_accessibility" />

    <TextView
        android:id="@+id/tv_time"
        style="@style/style_btn"
        android:text="@string/time_date"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_app_manage" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_app_bg"
        android:overScrollMode="never"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@id/checkbox"
        app:layout_constraintStart_toEndOf="@id/tv_app_name"
        app:layout_constraintTop_toBottomOf="@id/checkbox" />
</androidx.constraintlayout.widget.ConstraintLayout>