<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:padding="20dp"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_download"
        style="@style/style_btn"
        android:text="@string/download"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_download_and_open"
        style="@style/style_btn"
        android:text="@string/download_and_open"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_download" />

    <TextView
        android:id="@+id/tv_cancel"
        style="@style/style_btn"
        android:text="@string/cancel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_download_and_open" />


</androidx.constraintlayout.widget.ConstraintLayout>