<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="8dp"
    android:paddingBottom="8dp"
    android:background="@color/white"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/tv_home"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:drawablePadding="3dp"
        android:drawableTop="@mipmap/icon_home"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="@color/black"
        android:textSize="13sp" />

    <TextView
        android:id="@+id/tv_setting"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:drawablePadding="3dp"
        android:drawableTop="@mipmap/icon_setting"
        android:gravity="center"
        android:text="@string/setting"
        android:textColor="@color/black"
        android:textSize="13sp" />

    <TextView
        android:id="@+id/tv_language"
        android:layout_width="0dp"
        android:gravity="center"
        android:drawablePadding="3dp"
        android:drawableTop="@mipmap/icon_language"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/language"
        android:textColor="@color/black"
        android:textSize="13sp" />

    <TextView
        android:id="@+id/tv_start_app"
        android:layout_width="0dp"
        android:gravity="center"
        android:drawablePadding="3dp"
        android:drawableTop="@mipmap/icon_start_app"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/app_start"
        android:textColor="@color/black"
        android:textSize="13sp" />

</LinearLayout>